tests/baselines/reference/crashInsourcePropertyIsRelatableToTargetProperty.errors.txt
tests/cases/compiler/crashInsourcePropertyIsRelatableToTargetProperty.ts(9,5): error TS2737: Property 'x' is missing in type '(x: "hi", items: string[]) => typeof foo' but present in type 'D'.


==== tests/cases/compiler/crashInsourcePropertyIsRelatableToTargetProperty.ts (1 errors) ====
    class C {
        private x = 1;
    }
    class D extends C { }
    function foo(x: "hi", items: string[]): typeof foo;
    function foo(x: string, items: string[]): typeof foo {
        return null;
    }
    var a: D = foo("hi", []);
        ~
!!! error TS2737: Property 'x' is missing in type '(x: "hi", items: string[]) => typeof foo' but present in type 'D'.
    